CoqOfSolidity/test/libsolidity/semanticTests/errors/named_error_args.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error E *)

(* Contract *)
Module C.
  Definition f (α : list Value.t) : M :=
    match α with
    | [] =>
      let _ :=
        M.revert (|
          M.call (|
            M.get_name (| "E" |),
            [
              Value.Integer 7,
              Value.Integer 2
            ]
          |)
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.
End C.
